# openenv-customer-support-ai

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
scripts/: evaluate.py  run_baseline.py
server/: app.py
src/: __init__.py  env.py  grader.py  models.py  utils.py
src/tasks/: __init__.py  easy.py  hard.py  medium.py
tests/: test_env.py  test_grader.py
