[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-support"
version = "1.0.0"
description = "A production-inspired customer support ticket resolution environment for OpenEnv"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenEnv Team"},
]
keywords = ["openenv", "customer-support", "text-based", "deterministic-grading"]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "openai>=1.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
